--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
 node_modules/
 dist/
 .env
+.env.local
+.env.production
 .DS_Store
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .vercel
+lambda/.env
+lambda/node_modules/
+*.zip
+.aws/
+.serverless/
